--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,15 @@
 <div class="section">
 	<div class="row">
+		<div class="small-5 small-centered columns">
+			<h3 class="head1 animated fadeInLeftBig">طراحی و برنامه نویسی وب سایت</h3>
+			<h3 class="head2 animated fadeInRightBig">با استفاده از Ruby on Rails</h3>
+		</div>
+	</div>
+	<br />
+	<br />
+	<br />
+	<br />
+	<div class="row">
 		<h4 class="head animated slideInDown">آخرین کارهای انجام شده</h4>
 		<hr />
 		<div class="small-4 columns img1 animated slideInDown" >
@@ -15,7 +25,7 @@
 </div>
 <div class="section">
 	<div class="row">
-		<div class="large-12 columns large-centered">
+		<div class="large-9 columns large-centered">
 			<h4>تکنولوژی هایی که در طراحی و برنامه نویسی وب مورد استفاده قرار میدهیم</h4>
 			<hr />
 			<img src="/images/logos.png" />
