--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,10 @@
             <script type="text/javascript">
 		$(document).ready(function() {
 			$.fn.fullpage({
-				slidesColor: ['#4BC3A1', '#4BBFC3'],
+        easing: 'swing',
+				slidesColor: ['#4BC3A1', '#4BBFC3', '#383838'],
 				'navigation': true,
-				slidesNavigation: true				
+				slidesNavigation: true
 			});
 		});
 
