--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -77,6 +77,7 @@ body {
   -moz-animation-delay: 5s;
   -o-animation-delay: 5s;
   animation-delay: 5s;
+  text-align: center;
 }
 
 .head2 {
@@ -84,6 +85,7 @@ body {
   -moz-animation-delay: 5s;
   -o-animation-delay: 5s;
   animation-delay: 5s;
+  text-align: center;
 }
 
 .img1 {
@@ -115,8 +117,38 @@ body {
   opacity:0.8;
 }
 
+.foot p {
+  color: white;
+  font-family: bhoma;
+}
+
+.row.tit p{
+  color: white;
+  font-family: bhoma;
+  font-size: 15px;
+  text-align: center;
+}
+.row.det p{
+  color: #D9D9D9;
+  font-family: bhoma;
+  text-align: center;
+}
+
 .row.contact {
   margin-top: 75px;
+}
+
+.foot h2 {
+  color: white;
+}
+
+.large-4.columns.latin {
+  text-align: center;
+}
+
+.large-4.columns.latin p {
+  color: #D9D9D9;
+  margin-top: -14px;
 }
 
 h1, h2, h3, h4 {
