--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,56 @@
 <div class="section">
 	<div class="row">
+      <div class="small-6 small-centered columns">
+
+        <div class="small-4 columns">
+        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+          <div class="flipper">
+            <div class="front">
+              <img src="/images/intro/dev.jpg">
+            </div>
+            <div class="back">
+              <img src="/images/intro/dev.jpg">
+              <h4 dir="ltr"><span>Web development with Rails</span></h4>
+            </div>
+          </div>
+        </div>
+        </div>
+
+        <div class="small-4 columns">
+          <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+            <div class="flipper">
+              <div class="front">
+                <img src="/images/intro/wd.jpg">
+              </div>
+              <div class="back">
+                <img src="/images/intro/wd.jpg">
+                <h4 dir="ltr"><span>Web Design</span></h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="small-4 columns">
+          <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+            <div class="flipper">
+              <div class="front">
+                <img src="/images/intro/gd.jpg">
+              </div>
+              <div class="back">
+                <img src="/images/intro/gd.jpg">
+                <h4 dir="ltr"><span>Graphic Design</span></h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+<!--
 		<div class="small-5 small-centered columns">
 			<h3 class="head1 animated fadeInLeftBig">طراحی و برنامه نویسی وب سایت</h3>
 			<h3 class="head2 animated fadeInRightBig">با استفاده از Ruby on Rails</h3>
 		</div>
+-->
 	</div>
-	<br />
-	<br />
-	<br />
-	<br />
 	<div class="row">
 		<h4 class="head animated slideInDown">آخرین کارهای انجام شده</h4>
 		<hr />
