--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,7 @@
  *= require jquery.fullPage
  *= require animate.css
  *= require_self
-
+ *= require rotate
  *= require_tree .
  */
 
@@ -149,6 +149,7 @@ body {
 .large-4.columns.latin p {
   color: #D9D9D9;
   margin-top: -14px;
+  font-size: 10px;
 }
 
 h1, h2, h3, h4 {
