--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,22 @@
   <body>
     <%= javascript_include_tag "application" %>
     <%= render "layouts/navigation" %>
-        <%= yield %>
+    <ul id="menu">
+	    <li data-menuanchor="firstPage"><a href="#firstPage">معرفی</a></li>
+	    <li data-menuanchor="secondPage"><a href="#secondPage">تکنولوژی ها</a></li>
+	    <li data-menuanchor="3rdPage"><a href="#3rdPage">تماس با ما</a></li>
+    </ul>
+    <%= yield %>
+    
             <script type="text/javascript">
 		$(document).ready(function() {
 			$.fn.fullpage({
         easing: 'swing',
 				slidesColor: ['#4BC3A1', '#4BBFC3', '#383838'],
 				'navigation': true,
-				slidesNavigation: true
+				slidesNavigation: true,
+        anchors: ['firstPage', 'secondPage', '3rdPage'],
+				menu: '#menu'
 			});
 		});
 
