--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= javascript_include_tag "application" %>
-    <%= render "layouts/navigation" %>
+    <!--<%= render "layouts/navigation" %>-->
     <ul id="menu">
 	    <li data-menuanchor="firstPage"><a href="#firstPage">معرفی</a></li>
 	    <li data-menuanchor="secondPage"><a href="#secondPage">تکنولوژی ها</a></li>
