--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="description" content="طراحی و توسعه وب سایت و وب اپلیکیشن با استفاده روبی ان ریلز، جاوا اسکریپت." />
+    <meta name="keywords" content="طراحی و برنامه نویسی وب,وب اپلیکیشن, Web Application,Ruby on Rails,Jquery,HTML,CSS,XML,JavaScript" />
+    <meta name="author" content="Abolfazl Mahmoodi" />
+    
     <title><%= content_for?(:title) ? yield(:title) : "طراحی و توسعه وب" %></title>
 
     <%= stylesheet_link_tag    "application" %>
