--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -179,6 +179,7 @@ textarea {
 #menu li a{
 	text-decoration:none;
 	color: #000;
+  font-family: bhoma;
 }
 #menu li.active a:hover{
 	color: #000;
