--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
             <script type="text/javascript">
 		$(document).ready(function() {
 			$.fn.fullpage({
-        easing: 'swing',
+        easing: 'easeInQuart',
 				slidesColor: ['#4BC3A1', '#4BBFC3', '#383838'],
 				'navigation': true,
 				slidesNavigation: true,
