--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -108,7 +108,7 @@
 					</p>
 				</div>
 			</div>
-<%= simple_form_for Inquiry.new, html: {class: 'custom', data-abide, :novalidate => true} do |f| %>
+<%= simple_form_for Inquiry.new, html: {class: 'custom', :novalidate => true} do |f| %>
 	<div class="large-6 columns">
 		<h1>ارسال پیام</h1>
 		<p>
