--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
 <div class="section">
-	<div class="row">
-      <div class="small-6 small-centered columns">
+  <div class="row">
+    <div class="small-6 small-centered columns">
 
-        <div class="small-4 columns">
+      <div class="small-4 columns">
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
           <div class="flipper">
             <div class="front">
@@ -14,133 +14,140 @@
             </div>
           </div>
         </div>
-        </div>
+      </div>
 
-        <div class="small-4 columns">
-          <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-            <div class="flipper">
-              <div class="front">
-                <img src="/images/intro/wd.jpg">
-              </div>
-              <div class="back">
-                <img src="/images/intro/wd.jpg">
-                <h4 dir="ltr"><span>Web Design</span></h4>
-              </div>
+      <div class="small-4 columns">
+        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+          <div class="flipper">
+            <div class="front">
+              <img src="/images/intro/wd.jpg">
             </div>
-          </div>
-        </div>
-
-        <div class="small-4 columns">
-          <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-            <div class="flipper">
-              <div class="front">
-                <img src="/images/intro/gd.jpg">
-              </div>
-              <div class="back">
-                <img src="/images/intro/gd.jpg">
-                <h4 dir="ltr"><span>Graphic Design</span></h4>
-              </div>
+            <div class="back">
+              <img src="/images/intro/wd.jpg">
+              <h4 dir="ltr"><span>Web Design</span></h4>
             </div>
           </div>
         </div>
       </div>
-<!--
-		<div class="small-5 small-centered columns">
-			<h3 class="head1 animated fadeInLeftBig">طراحی و برنامه نویسی وب سایت</h3>
-			<h3 class="head2 animated fadeInRightBig">با استفاده از Ruby on Rails</h3>
-		</div>
--->
-	</div>
-	<div class="row">
-		<h4 class="head animated slideInDown">آخرین کارهای انجام شده</h4>
-		<hr />
-		<div class="small-4 columns img1 animated slideInDown" >
-			<%= link_to image_tag('report.jpg'), "http://report2.darestan.ir", :target => "_blank" %>
-		</div>
-		<div class="small-4 columns img2 animated slideInDown">
-			<%= link_to image_tag('zamin.jpg'), "http://zaminha.ir", :target => "_blank" %>
-		</div>
-		<div class="small-4 columns img3 animated slideInDown">
-			<%= link_to image_tag('darestan.jpg'), "http://darestan.ir", :target => "_blank" %>
-		</div>
-	</div>
-</div>
-<div class="section">
-	<div class="row">
-		<div class="large-9 columns large-centered">
-			<h4>تکنولوژی هایی که در طراحی و برنامه نویسی وب مورد استفاده قرار میدهیم</h4>
-			<hr />
-			<img src="/images/logos.png" />
 
-		</div>
-	</div>
+      <div class="small-4 columns">
+        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+          <div class="flipper">
+            <div class="front">
+              <img src="/images/intro/gd.jpg">
+            </div>
+            <div class="back">
+              <img src="/images/intro/gd.jpg">
+              <h4 dir="ltr"><span>Graphic Design</span></h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--
+            <div class="small-5 small-centered columns">
+                <h3 class="head1 animated fadeInLeftBig">طراحی و برنامه نویسی وب سایت</h3>
+                <h3 class="head2 animated fadeInRightBig">با استفاده از Ruby on Rails</h3>
+            </div>
+    -->
+  </div>
+  <div class="row">
+    <h4 class="head animated slideInDown">آخرین کارهای انجام شده</h4>
+    <hr/>
+    <div class="small-4 columns img1 animated slideInDown">
+      <%= link_to image_tag('report.jpg'), "http://report2.darestan.ir", :target => "_blank" %>
+    </div>
+    <div class="small-4 columns img2 animated slideInDown">
+      <%= link_to image_tag('zamin.jpg'), "http://zaminha.ir", :target => "_blank" %>
+    </div>
+    <div class="small-4 columns img3 animated slideInDown">
+      <%= link_to image_tag('darestan.jpg'), "http://darestan.ir", :target => "_blank" %>
+    </div>
+  </div>
 </div>
 <div class="section">
-	<div class="row foot">
-			<div class="large-6 columns">
-				<ul class="small-block-grid-4">
-						<p style="font-size: 15px;">
-							راه های ارتباط با ما در شبکه های اجتماعی
-						</p>
-					<li><%= link_to image_tag("googleplus.png"), "https://google.com/+AbolfazlMahmoodi", :target => "_blank" %>
-					</li>
-					<li><%= link_to image_tag("linkedin.png"), "http://ir.linkedin.com/pub/abolfazl-mahmoodi/2b/779/12a", :target => "_blank" %>
-					</li>
-					<li><%= link_to image_tag("facebook.png"), "https://www.facebook.com/webdrr", :target => "_blank" %>
-					</li>
-					<li><%= link_to image_tag("twitter.png"), "https://twitter.com/webdrr", :target => "_blank" %>
-					</li>
-					
-				</ul>
+  <div class="row">
+    <div class="large-9 columns large-centered">
+      <h4>تکنولوژی هایی که در طراحی و برنامه نویسی وب مورد استفاده قرار میدهیم</h4>
+      <hr/>
+      <img src="/images/logos.png"/>
+
+    </div>
+  </div>
+</div>
+<div class="section">
+  <div class="row foot">
+    <div class="large-6 columns">
+      <div class="row">
+        <ul class="small-block-grid-4">
+          <p style="font-size: 15px;">
+            راه های ارتباط با ما در شبکه های اجتماعی
+          </p>
+          <li><%= link_to image_tag("googleplus.png"), "https://google.com/+AbolfazlMahmoodi", :target => "_blank" %>
+          </li>
+          <li><%= link_to image_tag("linkedin.png"), "http://ir.linkedin.com/pub/abolfazl-mahmoodi/2b/779/12a", :target => "_blank" %>
+          </li>
+          <li><%= link_to image_tag("facebook.png"), "https://www.facebook.com/webdrr", :target => "_blank" %>
+          </li>
+          <li><%= link_to image_tag("twitter.png"), "https://twitter.com/webdrr", :target => "_blank" %>
+          </li>
+
+        </ul>
         <div class="row tit">
-					<p>
-						تماس با ما
-					</p>
-				</div>
-				<div class="row det">
-					<p>
-						ایمیل: msd.soft@gmail.com
-					</p>
-				</div>
-				<div class="row det">
-					<p>
-						موبایل: 09370027366
-					</p>
-				</div>
-			</div>
-<%= simple_form_for Inquiry.new, html: {class: 'custom', :novalidate => true} do |f| %>
-	<div class="large-6 columns">
-		<h1>ارسال پیام</h1>
-		<p>
-			لطفا فرم زیر را تکمیل نموده و برای ما ارسال کنید.
-		</p>
-		<div class="row collapse">
-			<div class="small-3 large-2 columns">
-				<span class="prefix"><i class="fa fa-user fa-lg" ></i></span>
-			</div>
-			<div class="small-9 large-10 columns">
-				<%= f.input :name, label: false, placeholder: "نام" %>
-			</div>
-		</div>
+          <p>
+            تماس با ما
+          </p>
+        </div>
+        <div class="row det">
+          <p>
+            ایمیل: msd.soft@gmail.com
+          </p>
+        </div>
+        <div class="row det">
+          <p>
+            موبایل: 09370027366
+          </p>
+        </div>
+      </div>
+      <div class="row">
 
-		<div class="row collapse">
-			<div class="small-3 large-2 columns">
-				<span class="prefix"><i class="fa fa-envelope fa-lg" ></i></span>
-			</div>
-			<div class="small-9 large-10 columns">
-				<%= f.input :email, required: false, label: false, placeholder: "ایمیل" %>
-			</div>
-		</div>
-		<div class="row collapse">
-			<div class="large-14 columns">
-				<%= f.input :message, required: false, label: false, as: :text, required: true, placeholder: "پیام" %>
-				<%= f.submit "ارسال پیام", class: 'button tiny success large-12' %>
-			</div>
-		</div>
-	</div>
+      </div>
+    </div>
+    <%= simple_form_for Inquiry.new, html: {class: 'custom'} do |f| %>
+        <div class="large-6 columns">
+          <h1>ارسال پیام</h1>
 
-	<% end %>
-    
-	</div>
+          <p>
+            لطفا فرم زیر را تکمیل نموده و برای ما ارسال کنید.
+          </p>
+
+          <div class="row collapse">
+            <div class="small-3 large-2 columns">
+              <span class="prefix"><i class="fa fa-user fa-lg"></i></span>
+            </div>
+            <div class="small-9 large-10 columns">
+              <%= f.input :name, label: false, placeholder: "نام" %>
+            </div>
+          </div>
+
+          <div class="row collapse">
+            <div class="small-3 large-2 columns">
+              <span class="prefix"><i class="fa fa-envelope fa-lg"></i></span>
+            </div>
+            <div class="small-9 large-10 columns">
+              <%= f.input :email, required: false, label: false, placeholder: "ایمیل" %>
+            </div>
+          </div>
+          <div class="row collapse">
+            <div class="large-14 columns">
+              <%= f.input :message, required: false, label: false, as: :text, required: true, placeholder: "پیام" %>
+              <%= f.submit "ارسال پیام", class: 'button tiny success large-12' %>
+            </div>
+          </div>
+        </div>
+
+    <% end %>
+
+  </div>
 </div>
 
