--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -126,12 +126,12 @@ body {
   color: white;
   font-family: bhoma;
   font-size: 15px;
-  text-align: center;
+//  text-align: center;
 }
 .row.det p{
   color: #D9D9D9;
   font-family: bhoma;
-  text-align: center;
+//  text-align: center;
 }
 
 .row.contact {
