--- a/app/views/inquiries/new.html.erb
+++ b/app/views/inquiries/new.html.erb
@@ -14,7 +14,7 @@
 		</div>
 	</div>
 		
-	<%= simple_form_for @inquiry, html: {class: 'custom', :novalidate => true} do |f| %>
+	<%= simple_form_for @inquiry, html: {'data-abide' => ' ', class: 'custom', :novalidate => true} do |f| %>
 	<div class="large-6 columns">
 		<h1>ارسال پیام</h1>
 		<p>
@@ -25,8 +25,10 @@
 				<span class="prefix"><i class="fa fa-user fa-lg" ></i></span>
 			</div>
 			<div class="small-9 large-10 columns">
-				<%= f.input :name, label: false, placeholder: "نام" %>
+				<%= f.input :name, label: false, placeholder:"نام" %>
+
 			</div>
+
 		</div>
 
 		<div class="row collapse">
