--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="section">
   <div class="row">
-    <div class="small-6 small-centered columns">
+    <div class="large-6 large-centered columns">
 
       <div class="small-4 columns">
         <div class="flip-container animated bounceIn" ontouchstart="this.classList.toggle('hover');">
