--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,7 +61,7 @@
       <%= link_to image_tag('zamin.jpg'), "http://zaminha.ir", :target => "_blank" %>
     </div>
     <div class="small-4 columns img3 animated slideInDown">
-      <%= link_to image_tag('darestan.jpg'), "http://darestan.ir", :target => "_blank" %>
+      <%= link_to image_tag('darestan.jpg'), "http://78.46.231.102:8963", :target => "_blank" %>
     </div>
   </div>
 </div>
