--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,8 +66,8 @@
   </div>
 </div>
 <div class="section">
-  <div class="row">
-    <div class="large-9 columns large-centered">
+  <div class="row" style="margin-top: 100px">
+    <div class="large-9 columns large-centered" >
       <h4>تکنولوژی هایی که در طراحی و برنامه نویسی وب مورد استفاده قرار میدهیم</h4>
       <hr/>
       <img src="/images/logos.png"/>
@@ -114,7 +114,9 @@
     </div>
     <%= simple_form_for Inquiry.new, html: {class: 'custom'} do |f| %>
         <div class="large-6 columns">
-          <h1>ارسال پیام</h1>
+          <h1 style="color: #ffffff">
+            ارسال پیام
+          </h1>
 
           <p>
             لطفا فرم زیر را تکمیل نموده و برای ما ارسال کنید.
