--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,10 +58,10 @@
       <%= link_to image_tag('report.jpg'), "http://report2.darestan.ir", :target => "_blank" %>
     </div>
     <div class="small-4 columns img2 animated slideInDown">
-      <%= link_to image_tag('zamin.jpg'), "http://zaminha.ir", :target => "_blank" %>
+      <%= link_to image_tag('zamin.jpg'), "http://zamin.darestan.ir", :target => "_blank" %>
     </div>
     <div class="small-4 columns img3 animated slideInDown">
-      <%= link_to image_tag('darestan.jpg'), "http://78.46.231.102:8963", :target => "_blank" %>
+      <%= link_to image_tag('darestan.jpg'), "http://test.darestan.ir", :target => "_blank" %>
     </div>
   </div>
 </div>
