--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -84,7 +84,7 @@
             راه های ارتباط با ما در شبکه های اجتماعی
           </p>
           <li>
-            <%= link_to image_tag("googleplus.png"), "https://google.com/+AbolfazlMahmoodi", :target => "_blank" %>
+            <%= link_to image_tag("googleplus.png"), "https://plus.google.com/110466735490799239482", :target => "_blank" %>
           </li>
           <li><%= link_to image_tag("linkedin.png"), "http://ir.linkedin.com/pub/abolfazl-mahmoodi/2b/779/12a", :target => "_blank" %>
           </li>
@@ -92,7 +92,6 @@
           </li>
           <li><%= link_to image_tag("twitter.png"), "https://twitter.com/webdrr", :target => "_blank" %>
           </li>
-
         </ul>
         
       </div>
