--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
+<ul id="menu">
+  <li data-menuanchor="firstPage"><a href="#firstPage">معرفی</a></li>
+  <li data-menuanchor="secondPage"><a href="#secondPage">تکنولوژی ها</a></li>
+  <li data-menuanchor="3rdPage"><a href="#3rdPage">تماس با ما</a></li>
+  <li data-menuanchor="4thPage"><%= link_to 'وبلاگ', '/posts' %></li>
+</ul>
+
 <div class="section">
   <div class="row">
     <div class="large-6 large-centered columns">
@@ -102,7 +109,7 @@
         </div>
         <div class="row det" style="margin-right: 15px;">
           <p>
-            ایمیل: msd.soft@gmail.com
+            ایمیل: rubywebit@gmail.com
           </p>
         </div>
         <div class="row det" style="margin-right: 15px;">
