--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New post</h1>
+<div class="row post">
+  <div id="forms">
+    <h4>مطلب جدید</h4>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', posts_path %>
+    <%= link_to 'بازگشت', posts_path %>
+  </div>
+</div>
