--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,16 @@
-<p id="notice"><%= notice %></p>
+<%= render 'layouts/navigation' %>
+<div class="row post">
+  <div id="post-body">
+    <h4> <%= @post.title %> </h4>
+    <span id="post-detail"><%= JalaliDate.to_jalali(@post.created_at).strftime("%d %B %Y") %></span>
+    <%= raw @post.body %>
+    <% if user_signed_in? %>
+        <% if current_user.has_role? :admin %>
+            <%= link_to 'ویرایش', edit_post_path(@post) %>
+            |
+        <% end %>
+    <% end %>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+    <%= link_to 'بازگشت', posts_path %>
+  </div>
+</div>
