--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,17 @@
+<script type="text/javascript">
+    $(document).ready(function () {
+        $.fn.fullpage({
+            easing: 'easeInQuart',
+            slidesColor: ['#4BC3A1', '#4BBFC3', '#383838'],
+            'navigation': true,
+            slidesNavigation: true,
+            anchors: ['firstPage', 'secondPage', '3rdPage'],
+            menu: '#menu'
+        });
+    });
+
+</script>
+
 <ul id="menu">
   <li data-menuanchor="firstPage"><a href="#firstPage">معرفی</a></li>
   <li data-menuanchor="secondPage"><a href="#secondPage">تکنولوژی ها</a></li>
