--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 <%= render 'layouts/navigation' %>
+<% title @post.title %>
 <div class="row post">
   <div id="post-body">
     <h4> <%= @post.title %> </h4>
