--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,5 +28,11 @@
 <body>
 <%= javascript_include_tag "application" %>
 <%= yield %>
+
+<div style="display: none;">
+  <script type="text/javascript" language="javascript" src="http://www.webgozar.ir/c.aspx?Code=3243379&amp;t=counter" ></script>
+  <noscript><a href="http://www.webgozar.com/counter/stats.aspx?code=3243379" target="_blank">&#1570;&#1605;&#1575;&#1585;</a></noscript>
+</div>
+
 </body>
 </html>
