--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -452,3 +452,42 @@ section.sec-art:hover {
   font-family: tahoma;
   font-size: 11px;
 }
+
+.random {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #fa6634;
+  margin-top: 100px;
+
+}
+
+.random a {
+  padding: 10px;
+
+}
+
+.rand-post {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  padding: 10px;
+  border-bottom: 1px solid rgb(204, 201, 209);
+}
+.rand-post:hover {
+  -webkit-box-shadow: 0 5px 5px #999999;
+  box-shadow: 0 5px 5px #999999;
+  background: #acd7e5;
+}
+
+.row.header {
+  background: #fa6634;
+}
+
+.row.header h4 {
+  padding: 5px;
+}
