--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -217,7 +217,7 @@ textarea {
 .sec-art p {
   font-family: tahoma;
   font-size: 12px;
-  width: 800px;
+  width: 100%;
 }
 
 .sec-art figure img {
