--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -31,6 +31,9 @@
           </article>
         </section>
     <% end %>
+    <div class"row paging">
+      <%= will_paginate @posts %>
+    </div>
   </div>
   <div class="small-6 large-4 columns random">
     <div class="row header">
